@@ -10,6 +10,7 @@ PHP                                                                        NEWS
 - Fixed bug #33578 (strtotime() problem with "Oct17" format). (Derick)
 - Fixed bug #33558 (warning with nested calls to functions returning by
   reference). (Dmitry)
+- Fixed bug #32139 (SOAP client does not auto-handle base64 encoding). (Ilia)
 
 14 Jul 2005, PHP 5.1 Beta 3
 - Upgraded bundled SQLite library for PDO:SQLite to 3.2.2 (Ilia)
